--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                         </ul>
             
                     </li>
+                    <li> <a href="backpropagation.html">Error backpropagation</a>
+                        <ul>
+                            <li><a href=backpropagation-simple-simulation.html">A minimal simulation</a></li>
+                        </ul>
+            
+                    </li>   
                 </ul>
                 <br>
                 <ul><li> <a href="Utilities.html">Utilities</a></ul>
