--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </li>
                     <li> <a href="backpropagation.html">Error backpropagation</a>
                         <ul>
-                            <li><a href=backpropagation-simple-simulation.html">A minimal simulation</a></li>
+                            <li><a href="backpropagation-simple-simulation.html">A minimal simulation</a></li>
                         </ul>
             
                     </li>   
