--- a/mnist.html
+++ b/mnist.html
@@ -483,7 +483,7 @@ Next cell is just for styling</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">from</span> <span class="nn">IPython.core.display</span> <span class="kn">import</span> <span class="n">HTML</span>
@@ -501,7 +501,7 @@ Next cell is just for styling</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <style>
@@ -536,9 +536,9 @@ div.input_area pre {
 }
 
 
-div.input_area  { padding: 10px;  }
+div.input_area  { padding: 10px; overflow: auto  }
 .rendered_html p{ text-align: left }
-div.input_area>div.highlight  { padding:10px; }
+div.input_area>div.highlight  { padding:10px; width: 500px !important}
 
 /* FONT_CODE */
 .input_area pre { font-size:10px; line-height:120% }
