--- a/hopfield-MNIST-simulation.html
+++ b/hopfield-MNIST-simulation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>mnist-hopfield</title>
+<title>hopfield-MNIST-simulation</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -174,7 +174,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Storing-and-recalling-MNIST-digits">Storing and recalling MNIST digits<a class="anchor-link" href="#Storing-and-recalling-MNIST-digits">&#182;</a></h1>
+<h1 id="Storing-and-recalling-MNIST-digits-with-Hopfield-nets">Storing and recalling MNIST digits with Hopfield nets<a class="anchor-link" href="#Storing-and-recalling-MNIST-digits-with-Hopfield-nets">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -900,7 +900,7 @@ Next cell is just for styling</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[247]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">from</span> <span class="nn">IPython.core.display</span> <span class="kn">import</span> <span class="n">HTML</span>
@@ -918,7 +918,7 @@ Next cell is just for styling</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[247]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <style>
@@ -953,9 +953,9 @@ div.input_area pre {
 }
 
 
-div.input_area  { padding: 10px;  }
+div.input_area  { padding: 10px; overflow: auto  }
 .rendered_html p{ text-align: left }
-div.input_area>div.highlight  { padding:10px; }
+div.input_area>div.highlight  { padding:10px; width: 500px !important}
 
 /* FONT_CODE */
 .input_area pre { font-size:10px; line-height:120% }
